# algorithms-data-structure-python

./: README.md  pyproject.toml
algorithms/: README.md
data_structures/arrays/: README.md  array.py
