[tool.poetry]
name = "algorithms-data-structure-python"
version = "0.1.0"
description = "Project to learn and practice common data structures and algorithm in Python"
authors = ["Mattias Sjödin <mattias.sjodin.6764@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
